--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio
     </title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/global.css">
 </head>
@@ -30,9 +31,15 @@
             <span id="tvorim-text">tvořím věci pro weby</span>
         </div>
         <div id="icony-text">
-            <a href="#"><img src="./images/github.png" alt="Github"></a>
-            <a href="#"><img src="./images/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="./images/linkedin.png" alt="linkedin"></a>
+            <a href="https://github.com/Sarasaly" target="_blank">
+                <i class="fa-brands fa-github" id="github" ></i>
+            </a>
+            <a href="#" class="disabled">
+                <i class="fa-brands fa-facebook" id="facebook" ></i>
+            </a>
+            <a href="https://www.linkedin.com/in/s%C3%A1ra-salayov%C3%A1-375759289/" target="_blank">
+                <i class="fa-brands fa-linkedin-in" id="linkedin" ></i>
+            </a>
         </div>
         <div>
             <div id="programmer"></div>
@@ -46,11 +53,22 @@
         </div>
         <div id="ukazka-prace">
             <span>Střípky mé práce</span>
+            <div id="ukazka">
+                <div></div>
+                <div></div>
+            </div>
+            
         </div>
+        
     </content>
 
-    <footer>
-
+    <footer>    
+        <section id="footer-logo">
+            <img src="./images/Logo.png" alt="Logo" class="footer-logo">
+        </section>
+        <div id="footer-text">
+            <span>© 2024 Drisal</span>
+        </div>
     </footer>
 </body>
 </html>
